# mcp-xardin

./: .gitignore  README.md  pyproject.toml
data/: sample_garden.org
src/xardin/: __main__.py  config.py  resources.py  server.py
src/xardin/db/: __init__.py  models.py  queries.py  schema.py
src/xardin/ingestion/: org_parser.py  sync.py
src/xardin/tools/: log_activity.py  manage.py  query.py  sync_notes.py
tests/: conftest.py  test_log_activity.py  test_manage.py  test_org_parser.py  test_query.py  test_resources.py  test_sync.py
